--- a/languages/en.yml
+++ b/languages/en.yml
@@ -19,7 +19,7 @@ sidebar:
     sticky: 'Popular'
     archives: 'archives'
     categories: 'categories'
-    links: 'links'
+    links: 'other references'
     tags: 'tags'
     tag_cloud: 'tag cloud'
 article:
