--- a/languages/vi.yml
+++ b/languages/vi.yml
@@ -17,10 +17,10 @@ sidebar:
     older: 'Cũ hơn'
     recents: 'Bài viết mới'
     archives: 'Lưu trữ'
-    categories: 'Chuyên mục'
-    links: 'Liên kết'
-    tags: 'Thẻ'
-    tag_cloud: 'Mây thẻ'
+    categories: 'Categories'
+    links: 'Link'
+    tags: 'Tag'
+    tag_cloud: 'Tag'
 article:
     comments: 'Bình luận'
     share: 'Chia sẻ'
