--- a/languages/en.yml
+++ b/languages/en.yml
@@ -32,3 +32,7 @@ insight:
     categories: 'Categories'
     tags: 'Tags'
     untitled: '(Untitled)'
+categories:
+    lifestyle: "lifestyle"
+    technologies: "technologies"
+    travel: "travel"
