--- a/languages/vi.yml
+++ b/languages/vi.yml
@@ -1,6 +1,7 @@
 index:
     home: 'Trang chủ'
     about: 'Giới thiệu'
+    contact-us: 'Contact us'
     search: 'Tìm kiếm'
     archive: 'Lưu trữ'
     category: 'Chuyên mục'
